# kinect_frame_calibration

./: CMakeLists.txt  README.md  package.xml
launch/: kinect_calibration.launch
notebooks/: kinect_calibration.ipynb
scripts/: republish.py
