<?xml version="1.0"?>
<package>
  <name>kinect_frame_calibration</name>
  <version>0.0.0</version>
  <description>The kinect_frame_calibration package</description>

  <maintainer email="yoan.mollard@inria.fr">Yoan Mollard</maintainer>
  <maintainer email="baptiste.busch@inria.fr">Baptiste Busch</maintainer>
  <license>TODO</license>

  <build_depend>ar_track_alvar</build_depend>
  <run_depend>ar_track_alvar</run_depend>
  <build_depend>freenect_launch</build_depend>
  <run_depend>freenect_launch</run_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
